--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -2,7 +2,7 @@ name: Terraform GitHub Actions
 
 on:
    push:
-    branches: [main]
+    branches: [master]
 jobs:
   Deploy_Resources:
     runs-on: ubuntu-20.04
@@ -24,22 +24,22 @@ jobs:
           terraform --version
           terraform fmt
         continue-on-error: true
-        working-directory: ./infrastructure
+        working-directory: ./terraform
       - name: Terraform Init
         id: init
         run: terraform init
-        working-directory: ./infrastructure
+        working-directory: ./terraform
       - name: Terraform Validate
         id: validate
         run: terraform validate -no-color  
-        working-directory: ./infrastructure
+        working-directory: ./terraform
       - name: Terraform Plan
         id: plan
         run: terraform plan -no-color
         continue-on-error: true
-        working-directory: ./infrastructure
+        working-directory: ./terraform
       - name: Terraform Apply
         id: Apply
         run: terraform apply -auto-approve
         continue-on-error: true
-        working-directory: ./infrastructure
+        working-directory: ./terraform
