--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -2,7 +2,7 @@ name: Terraform GitHub Actions
 
 on:
    push:
-    branches: [master]
+    branches: [main]
 jobs:
   Deploy_Resources:
     runs-on: ubuntu-20.04
